# sqlite3-local-backups

./: CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: continuous_delivery.yml
src/sqlite_local_backups/: create_backup.py  create_folder_structure.py  delete_old_backups.py
