[tool.poetry]
name = "sqlite3-local-backups"
version = "0.2.0"
description = "Automated backups for Sqlite3 production databases."
authors = ["Rafael Oliveira <olirafa@proton.me>"]
license = "The Unlicense"
readme = "README.md"

packages = [{ include = "sqlite_local_backups", from = "src" }]


[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.0"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-backup = "sqlite_local_backups.create_backup:create_backup"
create-folder-structure = "sqlite_local_backups.create_folder_structure:create_folder_structure"